Ch 15 Weak Ref Node : rev 19 Summary reached

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
@@ -3927,6 +3927,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- `Rc::downgrade` => returns `Weak<T>` ref and adds to `weak_count` --\n",
+    "\n",
     "When you call `Rc::downgrade`, you get a smart pointer of type `Weak<T>`. \n",
     "\n",
     "- Instead of increasing the `strong_count` in the `Rc<T>` instance by `1`, \n",
@@ -3936,6 +3938,8 @@
     "The `Rc<T>` type uses `weak_count` to keep track of how many `Weak<T>`  \n",
     "references exist, similar to `strong_count`. The difference is the weak_count  \n",
     "doesn’t need to be 0 for the `Rc<T>` instance to be cleaned up.\n",
+    "\n",
+    "#### -- To drop a reference ONLY `Rc<T>` strong_count == 0 req --\n",
     "\n",
     "Because the value that `Weak<T>` references might have been dropped, to do  \n",
     "anything with the value that a `Weak<T>` is pointing to, you must make sure the  \n",
@@ -3993,6 +3997,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- `RefCell<Vec<Rc<Node>>>` Lets Node own children AND Mutabily Share --\n",
+    "\n",
     "We want a `Node` to own its children, and we want to share that ownership with  \n",
     "variables so we can access each `Node` in the tree directly. To do this, we  \n",
     "define the `Vec<T>` items to be values of type `Rc<Node>`. We also want to  \n",
@@ -4059,6 +4065,8 @@
     "> Listing 15-27: Creating a leaf node with no children and a branch node with  \n",
     "leaf as one of its children\n",
     "\n",
+    "#### -- Branch -> Leaf parent:child ! Leaf -> Branch child:parent --\n",
+    "\n",
     "We clone the `Rc<Node>` in `leaf` and store that in `branch`, meaning the `Node`  \n",
     "in `leaf` now has two owners: `leaf` and `branch`. \n",
     "\n",
@@ -4103,7 +4111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -4132,6 +4140,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- child:parent reference is Great Use case for `Weak<T>` --\n",
+    "\n",
     "A `node` will be able to refer to its `parent node` but doesn’t own its parent.  \n",
     "In Listing 15-28, we update main to use this new definition so the `leaf` node  \n",
     "will have a way to refer to its parent, `branch`:\n",
@@ -4141,7 +4151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -4163,7 +4173,7 @@
        "()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4175,8 +4185,9 @@
     "            value : 3,\n",
     "            // create a new empty Weak<Node> instance\n",
     "            // - will be assigning to Rc::downgrade(&branch)\n",
-    "            parent : RefCell::new(Weak::new()),\n",
-    "            children : RefCell::new(vec![]),\n",
+    "            parent : RefCell::new(Weak::new()), // measured with weak_count()\n",
+    "            children : RefCell::new(vec![]),    // measured with strong_count()\n",
+    "            // @audit-ok : for drop eligibility, ONLY strong_count() == 0 matters\n",
     "        }\n",
     "    );\n",
     "\n",
@@ -4276,6 +4287,158 @@
     "shown in Listing 15-29:\n",
     "\n",
     "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "leaf strong 1, leaf weak 0\n",
+      "Entering branch scope\n",
+      "branch strong 1, leaf weak 0\n",
+      "Leaf finding Parent\n",
+      "leaf parent = (Weak) // no upgrade\n",
+      "leaf parent = Some(Node { value: 5, parent: RefCell { value: (Weak) }, children: RefCell { value: [Node { value: 3, parent: RefCell { value: (Weak) }, children: RefCell { value: [] } }] } })\n",
+      "leaf strong 2, leaf weak 0\n",
+      "branch strong 1, leaf weak 1\n",
+      "Exited branch scope\n",
+      "leaf parent = (Weak) // no upgrade\n",
+      "leaf parent = None\n",
+      "leaf strong 1, leaf weak 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let leaf = Rc::new(\n",
+    "        Node {\n",
+    "            value : 3,\n",
+    "            parent : RefCell::new(Weak::new()),\n",
+    "            children : RefCell::new(vec![]),\n",
+    "        }\n",
+    "    );\n",
+    "\n",
+    "    println!(\"leaf strong {}, leaf weak {}\",\n",
+    "        Rc::strong_count(&leaf), Rc::weak_count(&leaf),\n",
+    "    );\n",
+    "\n",
+    "    {\n",
+    "        println!(\"Entering branch scope\");\n",
+    "        let branch = Rc::new(\n",
+    "            Node {\n",
+    "                value : 5,\n",
+    "                parent : RefCell::new(Weak::new()),\n",
+    "                children : RefCell::new(vec![Rc::clone(&leaf)]),\n",
+    "            }\n",
+    "        );\n",
+    "\n",
+    "        println!(\"branch strong {}, leaf weak {}\",\n",
+    "            Rc::strong_count(&branch), Rc::weak_count(&branch),\n",
+    "        );\n",
+    "\n",
+    "        println!(\"Leaf finding Parent\");\n",
+    "        *leaf.parent.borrow_mut() = Rc::downgrade(&branch);\n",
+    "        println!(\"leaf parent = {:?} // no upgrade\", leaf.parent.borrow());\n",
+    "        println!(\"leaf parent = {:?}\", leaf.parent.borrow().upgrade());\n",
+    "\n",
+    "        println!(\"leaf strong {}, leaf weak {}\",\n",
+    "            Rc::strong_count(&leaf), Rc::weak_count(&leaf),\n",
+    "        );\n",
+    "\n",
+    "        println!(\"branch strong {}, leaf weak {}\",\n",
+    "           Rc::strong_count(&branch), Rc::weak_count(&branch),\n",
+    "        );\n",
+    "    }\n",
+    "    println!(\"Exited branch scope\");\n",
+    "\n",
+    "    println!(\"leaf parent = {:?} // no upgrade\", leaf.parent.borrow());\n",
+    "    println!(\"leaf parent = {:?}\", leaf.parent.borrow().upgrade());\n",
+    "    println!(\"leaf strong {}, leaf weak {}\",\n",
+    "        Rc::strong_count(&leaf), Rc::weak_count(&leaf),\n",
+    "    );\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 15-29: Creating branch in an inner scope and examining strong and  \n",
+    "weak reference counts\n",
+    "\n",
+    "After leaf is created : \n",
+    "- its Rc<Node> has a strong count of 1 and a weak count of 0  \n",
+    "- In the inner scope, we create branch and associate it with leaf,  \n",
+    "- At which point when we print the counts, the Rc<Node> in branch will have a  \n",
+    "strong count of 1 and a weak count of 1 (for leaf.parent pointing to branch  \n",
+    "with a Weak<Node>). \n",
+    "- When we print the counts in leaf, we’ll see it will have a strong count of 2,  \n",
+    "because branch now has a clone of the Rc<Node> of leaf stored in  \n",
+    "branch.children, but will still have a weak count of 0.\n",
+    "\n",
+    "When the inner scope ends, branch goes out of scope and the strong count of the  \n",
+    "Rc<Node> decreases to 0, so its Node is dropped. The weak count of 1 from  \n",
+    "leaf.parent has no bearing on whether or not Node is dropped, so we don’t get  \n",
+    "any memory leaks!\n",
+    "\n",
+    "If we try to access the parent of leaf after the end of the scope, we’ll get  \n",
+    "None again. At the end of the program, the Rc<Node> in leaf has a strong count  \n",
+    "of 1 and a weak count of 0, because the variable leaf is now the only reference  \n",
+    "to the Rc<Node> again.\n",
+    "\n",
+    "All of the logic that manages the counts and value dropping is built into Rc<T>  \n",
+    "and Weak<T> and their implementations of the Drop trait. By specifying that the  \n",
+    "relationship from a child to its parent should be a Weak<T> reference in the  \n",
+    "definition of Node, you’re able to have parent nodes point to child nodes and  \n",
+    "vice versa without creating a reference cycle and memory leaks.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary\n",
+    "---\n",
+    "\n",
+    "This chapter covered how to use smart pointers to make different guarantees and  \n",
+    "trade-offs from those Rust makes by default with regular references. \n",
+    "\n",
+    "- The Box<T> type has a known size and points to data allocated on the heap. \n",
+    "- The Rc<T> type keeps track of the number of references to data on the heap so  \n",
+    "that data can have multiple owners. \n",
+    "- The RefCell<T> type with its interior mutability gives us a type that we can  \n",
+    "use when we need an immutable type but need to change an inner value of that  \n",
+    "type; it also enforces the borrowing rules at runtime instead of at compile time.\n",
+    "\n",
+    "Also discussed were the Deref and Drop traits, which enable a lot of the  \n",
+    "functionality of smart pointers. We explored reference cycles that can cause  \n",
+    "memory leaks and how to prevent them using Weak<T>.\n",
+    "\n",
+    "If this chapter has piqued your interest and you want to implement your own  \n",
+    "smart pointers, check out “The Rustonomicon” for more useful information.\n",
+    "\n",
+    "Next, we’ll talk about concurrency in Rust. You’ll even learn about a few new  \n",
+    "smart pointers."
    ]
   }
  ],
