Ch 16 Fearless Concurrency : rev 1 thread handle

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
@@ -135,11 +135,325 @@
     "\n",
     "> Filename: src/main.rs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi number 6 from the spawned thread\n",
+      "Hi number 7 from the spawned thread\n",
+      "Hi number 9 from the spawned thread\n",
+      "Hi number 8 from the spawned thread\n",
+      "hi number 1 from the main thread!\n",
+      "Hi number 1 from the spawned thread\n",
+      "hi number 2 from the main thread!\n",
+      "Hi number 2 from the spawned thread\n",
+      "hi number 3 from the main thread!\n",
+      "Hi number 3 from the spawned thread\n",
+      "hi number 4 from the main thread!\n",
+      "Hi number 4 from the spawned thread\n",
+      "Hi number 5 from the spawned thread\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::thread;\n",
+    "use std::time::Duration;\n",
+    "\n",
+    "{\n",
+    "    thread::spawn(||{\n",
+    "        for i in 1..10 {\n",
+    "            println!(\"Hi number {} from the spawned thread\", i);\n",
+    "            thread::sleep(Duration::from_millis(1));\n",
+    "        }\n",
+    "    });\n",
+    "\n",
+    "    for i in 1..5 {\n",
+    "        println!(\"hi number {} from the main thread!\", i);\n",
+    "        thread::sleep(Duration::from_millis(1));\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "> Listing 16-1: Creating a new thread to print one thing while the main thread  \n",
+    "prints something else\n",
+    "\n",
+    "Note that when the main thread of a Rust program completes, all spawned threads  \n",
+    "are shut down, whether or not they have finished running. The output from this  \n",
+    "program might be a little different every time, but it will look similar to the  \n",
+    "following:\n",
+    "\n",
+    "```rust\n",
+    "hi number 1 from the main thread!\n",
+    "hi number 1 from the spawned thread!\n",
+    "hi number 2 from the main thread!\n",
+    "hi number 2 from the spawned thread!\n",
+    "hi number 3 from the main thread!\n",
+    "hi number 3 from the spawned thread!\n",
+    "hi number 4 from the main thread!\n",
+    "hi number 4 from the spawned thread!\n",
+    "hi number 5 from the spawned thread!\n",
+    "```\n",
+    "\n",
+    "The calls to thread::sleep force a thread to stop its execution for a short  \n",
+    "duration, allowing a different thread to run. The threads will probably take  \n",
+    "turns, but that isn’t guaranteed: it depends on how your operating system  \n",
+    "schedules the threads. In this run, the main thread printed first, even though  \n",
+    "the print statement from the spawned thread appears first in the code. And even  \n",
+    "though we told the spawned thread to print until i is 9, it only got to 5 before  \n",
+    "the main thread shut down.\n",
+    "\n",
+    "If you run this code and only see output from the main thread, or don’t see any  \n",
+    "overlap, try increasing the numbers in the ranges to create more opportunities  \n",
+    "for the operating system to switch between the threads."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Waiting for All Threads to Finish Using `join` Handles\n",
+    "\n",
+    "The code in Listing 16-1 not only stops the spawned thread prematurely most of  \n",
+    "the time due to the main thread ending, but because there is no guarantee on the  \n",
+    "order in which threads run, we also can’t guarantee that the spawned thread will  \n",
+    "get to run at all!\n",
+    "\n",
+    "We can fix the problem of the spawned thread not running or ending prematurely  \n",
+    "by saving the return value of thread::spawn in a variable. The return type of  \n",
+    "thread::spawn is JoinHandle. A JoinHandle is an owned value that, when we call  \n",
+    "the join method on it, will wait for its thread to finish. Listing 16-2 shows  \n",
+    "how to use the JoinHandle of the thread we created in Listing 16-1 and call  \n",
+    "join to make sure the spawned thread finishes before main exits:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi number 1 from the main thread!\n",
+      "Hi number 1 from the spawned thread\n",
+      "Hi number 2 from the spawned thread\n",
+      "hi number 2 from the main thread!\n",
+      "Hi number 3 from the spawned thread\n",
+      "hi number 3 from the main thread!\n",
+      "Hi number 4 from the spawned thread\n",
+      "hi number 4 from the main thread!\n",
+      "Hi number 5 from the spawned thread\n",
+      "Hi number 6 from the spawned thread\n",
+      "Hi number 7 from the spawned thread\n",
+      "Hi number 8 from the spawned thread\n",
+      "Hi number 9 from the spawned thread\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::thread;\n",
+    "use std::time::Duration;\n",
+    "\n",
+    "{\n",
+    "    let handle = thread::spawn(\n",
+    "        || {\n",
+    "            for i in 1..10{\n",
+    "                println!(\"Hi number {} from the spawned thread\", i);\n",
+    "                thread::sleep(Duration::from_millis(1));\n",
+    "            }\n",
+    "        }\n",
+    "    );\n",
+    "\n",
+    "    for i in 1..5 {\n",
+    "        println!(\"hi number {} from the main thread!\", i);\n",
+    "        thread::sleep(Duration::from_millis(1));\n",
+    "    }\n",
+    "\n",
+    "    handle.join().unwrap();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 16-2: Saving a JoinHandle from thread::spawn to guarantee the thread  \n",
+    "is run to completion\n",
+    "\n",
+    "Calling join on the handle blocks the thread currently running until the thread  \n",
+    "represented by the handle terminates. Blocking a thread means that thread is  \n",
+    "prevented from performing work or exiting. Because we’ve put the call to join  \n",
+    "after the main thread’s for loop, running Listing 16-2 should produce output \n",
+    "similar to this:\n",
+    "\n",
+    "```rust\n",
+    "hi number 1 from the main thread!\n",
+    "hi number 2 from the main thread!\n",
+    "hi number 1 from the spawned thread!\n",
+    "hi number 3 from the main thread!\n",
+    "hi number 2 from the spawned thread!\n",
+    "hi number 4 from the main thread!\n",
+    "hi number 3 from the spawned thread!\n",
+    "hi number 4 from the spawned thread!\n",
+    "hi number 5 from the spawned thread!\n",
+    "hi number 6 from the spawned thread!\n",
+    "hi number 7 from the spawned thread!\n",
+    "hi number 8 from the spawned thread!\n",
+    "hi number 9 from the spawned thread!\n",
+    "```\n",
+    "\n",
+    "The two threads continue alternating, but the main thread waits because of the  \n",
+    "call to handle.join() and does not end until the spawned thread is finished.\n",
+    "\n",
+    "But let’s see what happens when we instead move handle.join() before the for  \n",
+    "loop in main, like this:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi number 1 from the spawned thread\n",
+      "Hi number 2 from the spawned thread\n",
+      "Hi number 3 from the spawned thread\n",
+      "Hi number 4 from the spawned thread\n",
+      "Hi number 5 from the spawned thread\n",
+      "Hi number 6 from the spawned thread\n",
+      "Hi number 7 from the spawned thread\n",
+      "Hi number 8 from the spawned thread\n",
+      "Hi number 9 from the spawned thread\n",
+      "hi number 1 from the main thread!\n",
+      "hi number 2 from the main thread!\n",
+      "hi number 3 from the main thread!\n",
+      "hi number 4 from the main thread!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::thread;\n",
+    "use std::time::Duration;\n",
+    "\n",
+    "{\n",
+    "    let handle = thread::spawn(||{\n",
+    "        for i in 1..10 {\n",
+    "            println!(\"Hi number {} from the spawned thread\", i);\n",
+    "            thread::sleep(Duration::from_millis(1));\n",
+    "        }\n",
+    "    });\n",
+    "\n",
+    "    handle.join().unwrap();\n",
+    "\n",
+    "    for i in 1..5 {\n",
+    "        println!(\"hi number {} from the main thread!\", i);\n",
+    "        thread::sleep(Duration::from_millis(1));\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main thread will wait for the spawned thread to finish and then run its for  \n",
+    "loop, so the output won’t be interleaved anymore, as shown here:\n",
+    "\n",
+    "```rust\n",
+    "hi number 1 from the spawned thread!\n",
+    "hi number 2 from the spawned thread!\n",
+    "hi number 3 from the spawned thread!\n",
+    "hi number 4 from the spawned thread!\n",
+    "hi number 5 from the spawned thread!\n",
+    "hi number 6 from the spawned thread!\n",
+    "hi number 7 from the spawned thread!\n",
+    "hi number 8 from the spawned thread!\n",
+    "hi number 9 from the spawned thread!\n",
+    "hi number 1 from the main thread!\n",
+    "hi number 2 from the main thread!\n",
+    "hi number 3 from the main thread!\n",
+    "hi number 4 from the main thread!\n",
+    "```\n",
+    "\n",
+    "Small details, such as where join is called, can affect whether or not your  \n",
+    "threads run at the same time."
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Rust",
+   "language": "rust",
+   "name": "rust"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "rust",
+   "file_extension": ".rs",
+   "mimetype": "text/rust",
+   "name": "Rust",
+   "pygment_lexer": "rust",
+   "version": ""
   },
   "orig_nbformat": 4
  },
