--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
@@ -773,6 +773,463 @@
     "With a basic understanding of threads and the thread API, let’s look at what we  \n",
     "can do with threads."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Message Passing to Transfer Data Between Threads\n",
+    "---\n",
+    "\n",
+    "One increasingly popular approach to ensuring safe concurrency is message  \n",
+    "passing, where threads or actors communicate by sending each other messages  \n",
+    "containing data. Here’s the idea in a slogan from the Go language documentation:  \n",
+    "\n",
+    "- “Do not communicate by sharing memory; instead, share memory by communicating.”\n",
+    "\n",
+    "To accomplish message-sending concurrency, Rust's standard library provides an  \n",
+    "implementation of channels. A channel is a general programming concept by which  \n",
+    "data is sent from one thread to another.\n",
+    "\n",
+    "You can imagine a channel in programming as being like a directional channel of  \n",
+    "water, such as a stream or a river. If you put something like a rubber duck into  \n",
+    "a river, it will travel downstream to the end of the waterway.\n",
+    "\n",
+    "A channel has two halves:  \n",
+    "\n",
+    "- a transmitter and  \n",
+    "- a receiver. \n",
+    "\n",
+    "The transmitter half is the upstream location where you put rubber ducks into  \n",
+    "the river, and the receiver half is where the rubber duck ends up downstream.  \n",
+    "One part of your code calls methods on the transmitter with the data you want  \n",
+    "to send, and another part checks the receiving end for arriving messages. A  \n",
+    "channel is said to be closed if either the transmitter or receiver half is  \n",
+    "dropped."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we’ll work up to a program that has one thread to generate values and send  \n",
+    "them down a channel, and another thread that will receive the values and print  \n",
+    "them out. We’ll be sending simple values between threads using a channel to  \n",
+    "illustrate the feature. Once you’re familiar with the technique, you could use  \n",
+    "channels for any threads that need to communicate between each other, such as a  \n",
+    "chat system or a system where many threads perform parts of a calculation and  \n",
+    "send the parts to one thread that aggregates the results.\n",
+    "\n",
+    "First, in Listing 16-6, we’ll create a channel but not do anything with it.  \n",
+    "Note that this won’t compile yet because Rust can’t tell what type of values we  \n",
+    "want to send over the channel.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Couldn't automatically determine type of variable `tx`.\nPlease give it an explicit type.",
+     "output_type": "error",
+     "traceback": [
+      "Couldn't automatically determine type of variable `tx`.\nPlease give it an explicit type."
+     ]
+    }
+   ],
+   "source": [
+    "use std::sync::mpsc;\n",
+    "\n",
+    "// @audit : how come I can NOT enclose in {} block?\n",
+    "let (tx, rx) = mpsc::channel();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing 16-6: Creating a channel and assigning the two halves to tx and rx\n",
+    "\n",
+    "We create a new channel using the `mpsc::channel` function; `mpsc` stands for:\n",
+    "\n",
+    "- multiple producer, single consumer. \n",
+    "\n",
+    "In short, the way Rust’s standard library implements channels means a channel  \n",
+    "can have multiple sending ends that produce values but only one receiving end  \n",
+    "that consumes those values. Imagine multiple streams flowing together into one  \n",
+    "big river: everything sent down any of the streams will end up in one river at  \n",
+    "the end. We’ll start with a single producer for now, but we’ll add multiple  \n",
+    "producers when we get this example working.\n",
+    "\n",
+    "The `mpsc::channel` function `returns a tuple` :  \n",
+    "- the first element of which is the sending end--the transmitter--and  \n",
+    "- the second element is the receiving end--the receiver.  \n",
+    "\n",
+    "The abbreviations tx and rx are traditionally used in many fields for  \n",
+    "transmitter and receiver respectively, so we name our variables as such to  \n",
+    "indicate each end. We’re using a let statement with a pattern that destructures  \n",
+    "the tuples; we’ll discuss the use of patterns in let statements and  \n",
+    "destructuring in Chapter 18. For now, know that using a let statement this way  \n",
+    "is a convenient approach to extract the pieces of the tuple returned by  \n",
+    "`mpsc::channel`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s move the transmitting end into a spawned thread and have it send one  \n",
+    "string so the spawned thread is communicating with the main thread, as shown in  \n",
+    "Listing 16-7. This is like putting a rubber duck in the river upstream or  \n",
+    "sending a chat message from one thread to another.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "thread '<unnamed>' panicked at 'called `Result::unwrap()` on an `Err` value: SendError { .. }', src/lib.rs:29:18\n",
+      "stack backtrace:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "   0: _rust_begin_unwind\n",
+      "   1: core::panicking::panic_fmt\n",
+      "   2: core::result::unwrap_failed\n",
+      "note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "use std::sync::mpsc;\n",
+    "use std::thread;\n",
+    "\n",
+    "// @audit-ok : how come I can NOT enclose in {} block?\n",
+    "// ANSWER : this code as is, enclosed in a {} block, we will get Err::SendError\n",
+    "// - because the sender hasn't finished sending all it's messages before the\n",
+    "// receiver is dropped\n",
+    "// - not calling a recv() method in this code is same as a dropped receiver ...\n",
+    "// BEFORE the sender has finished sending all it's messages : that's why we get\n",
+    "// Err::SendError\n",
+    "let (tx, rx) = mpsc::channel();\n",
+    "\n",
+    "thread::spawn(move || {\n",
+    "    let val = String::from(\"hi\");\n",
+    "    tx.send(val).unwrap();\n",
+    "});"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 16-7: Moving tx to a spawned thread and sending “hi”\n",
+    "\n",
+    "Again, we’re using thread::spawn to create a new thread and then using move to  \n",
+    "move tx into the closure so the spawned thread owns tx. The spawned thread needs  \n",
+    "to own the transmitter to be able to send messages through the channel. The  \n",
+    "transmitter has a send method that takes the value we want to send. The send  \n",
+    "method returns a Result<T, E> type, so if the receiver has already been dropped  \n",
+    "and there’s nowhere to send a value, the send operation will return an error. In  \n",
+    "this example, we’re calling unwrap to panic in case of an error. But in a real  \n",
+    "application, we would handle it properly: return to Chapter 9 to review  \n",
+    "strategies for proper error handling.\n",
+    "\n",
+    "In Listing 16-8, we’ll get the value from the receiver in the main thread. This  \n",
+    "is like retrieving the rubber duck from the water at the end of the river or  \n",
+    "receiving a chat message.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got: hi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::sync::mpsc; // multi producer, single consumer\n",
+    "use std::thread;\n",
+    "\n",
+    "{   // @note : This can be enclosed in {} block\n",
+    "    let (tx, rx) = mpsc::channel();\n",
+    "\n",
+    "    thread::spawn( move || {\n",
+    "        let val = String::from(\"hi\");\n",
+    "        tx.send(val).unwrap();\n",
+    "    });\n",
+    "\n",
+    "    // @audit ... because we use it here?\n",
+    "    // ANSWER : recv() BLOCKS the main thread until a message is available\n",
+    "    // - preventing SendError when `sender` is NOT finished sending all it's \n",
+    "    // messages before the `receiver` is dropped\n",
+    "    let received = rx.recv().unwrap();\n",
+    "    println!(\"Got: {}\", received);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 16-8: Receiving the value “hi” in the main thread and printing it\n",
+    "\n",
+    "The receiver has two useful methods: recv and try_recv. We’re using recv, short  \n",
+    "for receive, which will :  \n",
+    "\n",
+    "- block the main thread’s execution and  \n",
+    "- wait until a value is sent down the channel.  \n",
+    "\n",
+    "Once a value is sent, recv will return it in a Result<T, E>. When the  \n",
+    "transmitter closes, recv will return an error to signal that no more values  \n",
+    "will be coming.\n",
+    "\n",
+    "The try_recv method doesn’t block, but will instead return a Result<T, E>  \n",
+    "immediately: an Ok value holding a message if one is available and an Err value  \n",
+    "if there aren’t any messages this time. Using try_recv is useful if this thread  \n",
+    "has other work to do while waiting for messages: we could write a loop that  \n",
+    "calls try_recv every so often, handles a message if one is available, and  \n",
+    "otherwise does other work for a little while until checking again.\n",
+    "\n",
+    "We’ve used recv in this example for simplicity; we don’t have any other work for  \n",
+    "the main thread to do other than wait for messages, so blocking the main thread  \n",
+    "is appropriate.\n",
+    "\n",
+    "When we run the code in Listing 16-8, we’ll see the value printed from the main  \n",
+    "thread:\n",
+    "\n",
+    "```sh\n",
+    "Got: hi\n",
+    "```\n",
+    "\n",
+    "Perfect!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Channels and Ownership Transference\n",
+    "\n",
+    "The ownership rules play a vital role in message sending because they help you  \n",
+    "write safe, concurrent code. Preventing errors in concurrent programming is the  \n",
+    "advantage of thinking about ownership throughout your Rust programs. Let’s do an  \n",
+    "experiment to show how channels and ownership work together to prevent problems:  \n",
+    "we’ll try to use a val value in the spawned thread after we’ve sent it down the  \n",
+    "channel. Try compiling the code in Listing 16-9 to see why this code isn’t  \n",
+    "allowed:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "expected value, found module `thread`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0423] Error:\u001b[0m expected value, found module `thread`",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_3:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m7 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mh\u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54md\u001b[0m\u001b[38;5;100m.\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mw\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mv\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m|\u001b[0m\u001b[38;5;249m|\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m     \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;100m┬\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m        \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m error: expected value, found module `thread`",
+      " \u001b[38;5;246m  ·\u001b[0m           \u001b[38;5;100m│\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m           \u001b[38;5;100m╰\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m help: use the path separator to refer to an item: `::`",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "use std::sync::mpsc;\n",
+    "use std::thread;\n",
+    "\n",
+    "{\n",
+    "    let (tx, rx) = mpsc::channel();\n",
+    "\n",
+    "    thread.spawn( move || {\n",
+    "        let val = String::from(\"hi\");\n",
+    "        tx.send(val).unwrap();\n",
+    "        println!(\"val is {}\", val);\n",
+    "    });\n",
+    "\n",
+    "    let received = rx.recv().unwrap();\n",
+    "    println!(\"Got : {}\", received);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 16-9: Attempting to use val after we’ve sent it down the channel\n",
+    "\n",
+    "Here, we try to print val after we’ve sent it down the channel via tx.send.  \n",
+    "Allowing this would be a bad idea: once the value has been sent to another  \n",
+    "thread, that thread could modify or drop it before we try to use the value  \n",
+    "again. Potentially, the other thread’s modifications could cause errors or  \n",
+    "unexpected results due to inconsistent or nonexistent data. However, Rust gives  \n",
+    "us an error if we try to compile the code in Listing 16-9:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling message-passing v0.1.0 (file:///projects/message-passing)\n",
+    "error[E0382]: borrow of moved value: `val`\n",
+    "  --> src/main.rs:10:31\n",
+    "   |\n",
+    "8  |         let val = String::from(\"hi\");\n",
+    "   |             --- move occurs because `val` has type `String`, which does not implement the `Copy` trait\n",
+    "9  |         tx.send(val).unwrap();\n",
+    "   |                 --- value moved here\n",
+    "10 |         println!(\"val is {}\", val);\n",
+    "   |                               ^^^ value borrowed here after move\n",
+    "   |\n",
+    "   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0382`.\n",
+    "error: could not compile `message-passing` due to previous error\n",
+    "```\n",
+    "\n",
+    "Our concurrency mistake has caused a compile time error. The send function takes  \n",
+    "ownership of its parameter, and when the value is moved, the receiver takes  \n",
+    "ownership of it. This stops us from accidentally using the value again after  \n",
+    "sending it; the ownership system checks that everything is okay."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sending Multiple Values and Seeing the Receiver Waiting\n",
+    "\n",
+    "The code in Listing 16-8 compiled and ran, but it didn’t clearly show us that  \n",
+    "two separate threads were talking to each other over the channel. In Listing  \n",
+    "16-10 we’ve made some modifications that will prove the code in Listing 16-8 is  \n",
+    "running concurrently: the spawned thread will now send multiple messages and  \n",
+    "pause for a second between each message.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got : hi\n",
+      "Got : from\n",
+      "Got : the\n",
+      "Got : thread\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::sync::mpsc; // multi producer, single consumer\n",
+    "use std::thread;\n",
+    "use std::time::Duration;\n",
+    "\n",
+    "{\n",
+    "    let (tx, rx) = mpsc::channel();\n",
+    "\n",
+    "    thread::spawn( move || {\n",
+    "        let vals = vec![\n",
+    "            String::from(\"hi\"),\n",
+    "            String::from(\"from\"),\n",
+    "            String::from(\"the\"),\n",
+    "            String::from(\"thread\"),\n",
+    "        ];\n",
+    "\n",
+    "        for val in vals {\n",
+    "            tx.send(val).unwrap();\n",
+    "            thread::sleep(Duration::from_secs(1));\n",
+    "        }\n",
+    "    });\n",
+    "\n",
+    "    for received in rx {\n",
+    "        println!(\"Got : {}\", received);\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
