--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
@@ -68,7 +68,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -192,7 +196,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -341,7 +349,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -424,7 +436,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -617,7 +633,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -820,7 +840,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -918,7 +942,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1040,7 +1068,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "#[derive(Debug)]\n",
@@ -1077,7 +1109,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1155,7 +1191,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1326,7 +1366,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "fn hello(name: &str) {\n",
@@ -1353,7 +1397,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1415,7 +1463,11 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1588,8 +1640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1606,7 +1662,7 @@
        "()"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1783,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1828,7 +1888,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2008,7 +2072,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2044,17 +2112,17 @@
     "                                // enum List def did NOT need it\n",
     "                                // but the closure below DOES \n",
     "                                // ANSWER :\n",
-    "                                // Cons and Nil are variants of the List enum\n",
-    "                                // - their scope are automatically in the scope of\n",
-    "                                // the List enum\n",
-    "                                // @audit : Understand IMPLICIT scope of enum variants\n",
+    "                                // LOL, `Cons` and `Nil` are List variants that  \n",
+    "                                // we custom DEFINED ... and aren't part of the  \n",
+    "                                // std::prelude or implicit to enum LOL\n",
+    "                                // - that's why we need to bring them into scope\n",
     "\n",
     "{\n",
     "    let a = Cons(5, Box::new(Cons(10, Box::new(Nil))));\n",
     "    let _b = Cons(3, Box::new(a));  // 1st var to point to `a` - no error\n",
     "    let _c = Cons(4, Box::new(a));  // errors when > 1 variable points to`a`\n",
     "}\n",
-    "                                    // @audit : why???\n",
+    "                                    // @audit-ok : why???\n",
     "                                    // ANSWER : \n",
     "                                    // - 1st `_b` assignment MOVES `a` into `_b`\n",
     "                                    // - 2nd `_c` assignment references `a` var that \n",
@@ -2162,10 +2230,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_b = Cons(3, Cons(5, Cons(10, Nil)))\n",
+      "_c = Cons(4, Cons(5, Cons(10, Nil)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#[derive(Clone, Debug)]\n",
     "enum List<'a, T> {\n",
     "    Cons(&'a T, Box<List<'a, T>>),\n",
     "    Nil,\n",
@@ -2173,11 +2265,24 @@
     "\n",
     "use crate::List::{Cons, Nil};\n",
     "\n",
-    "// @audit : OOOF DEAL WITH THIS MESS LATER OK LOL\n",
+    "// @audit-ok : OOOF DEAL WITH THIS MESS LATER OK LOL\n",
+    "// ANSWER : issue is that `enum variant` doesn't support access using dot notation\n",
+    "// - `a.0` and `a.1` are not valid\n",
+    "// - instead we need to use `pattern matching` to destructure the `enum variant`\n",
     "{\n",
     "    let a = Cons(&5, Box::new(Cons(&10, Box::new(Nil))));\n",
-    "    let _b = Cons(&3, Box::new(Cons(a.0, a.1.clone())));\n",
-    "    let _c = Cons(&4, Box::new(Cons(a.0, a.1.clone())));\n",
+    "\n",
+    "    // use pattern matching to destructure the enum variant\n",
+    "    // - dot notation is invalid : a.0 and a.1\n",
+    "    let (x, y) = match a {\n",
+    "        Cons(x, y) => (x,y),\n",
+    "        Nil => panic!(\"Expected Cons Got Nil\"),\n",
+    "    };\n",
+    "    // now we can get x and y\n",
+    "    let _b = Cons(&3, Box::new(Cons(x, y.clone())));\n",
+    "    let _c = Cons(&4, Box::new(Cons(x, y.clone())));\n",
+    "    println!(\"_b = {:?}\", _b);\n",
+    "    println!(\"_c = {:?}\", _c);\n",
     "}"
    ]
   },
@@ -2210,7 +2315,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2303,7 +2412,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2604,7 +2717,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2735,7 +2852,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub const QUOTA_OVER_ERROR:&str = \n",
@@ -2852,7 +2973,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2945,7 +3070,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3050,7 +3179,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "//#[cfg(test)] // commented out to manually run test in Jupyter cell\n",
@@ -3107,7 +3240,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// Run the test manually\n",
@@ -3186,7 +3323,11 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "mod tests {\n",
@@ -3234,7 +3375,11 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3358,7 +3503,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3381,10 +3530,11 @@
     }
    ],
    "source": [
-    "// Import these ... no implicit access in enum definition\n",
-    "use std::cell::RefCell;\n",
-    "use std::rc::Rc;\n",
+    "// Import necessary modules\n",
+    "use std::cell::RefCell; // supports interior mutability\n",
+    "use std::rc::Rc;        // supports reference counting\n",
     "\n",
+    "// Define a List enum with two variants : Cons and Nil\n",
     "#[derive(Debug)]\n",
     "enum List {\n",
     "    Cons(Rc<RefCell<i32>>, Rc<List>),\n",
@@ -3392,8 +3542,10 @@
     "}\n",
     "\n",
     "{\n",
-    "    // enum implicit has access, so we didn't need to import at main scope\n",
-    "    // but since we will use it in this closure, manual import is needed\n",
+    "\n",
+    "    // `Cons` and `Nil` are enum variants that we custom DEFINED\n",
+    "    // - To use we need to import them explicitly for ease of use, else we\n",
+    "    // need to use List::Cons and List::Nil on each call\n",
     "    use crate::List::{Cons, Nil};\n",
     "\n",
     "    // Create an instance of Rc<RefCell<i32>> and store it in `value`\n",
@@ -3410,7 +3562,12 @@
     "    let b = Cons(Rc::new(RefCell::new(3)), Rc::clone(&a));\n",
     "    let c = Cons(Rc::new(RefCell::new(4)), Rc::clone(&a));\n",
     "\n",
-    "    // @audit : Explain borrow_mut in detail\n",
+    "    // @audit-ok : Explain borrow_mut in detail\n",
+    "    // ANSWER :\n",
+    "    // - borrow_mut() method gets the mutable reference to the value inside `value`\n",
+    "    // - we then increment `value` by 10\n",
+    "    // - borrow_mut() is part of Rust's system for safely managing mutable\n",
+    "    // references\n",
     "    *value.borrow_mut() += 10;\n",
     "\n",
     "    // print results\n",
@@ -3526,7 +3683,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::cell::RefCell;\n",
@@ -3610,7 +3771,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3850,7 +4015,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::cell::RefCell;\n",
@@ -3890,7 +4059,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3956,6 +4129,8 @@
    "source": [
     "### Adding a Reference from a Child to Its Parent\n",
     "\n",
+    "<iframe src=\"https://giphy.com/embed/3d0amMEvOOZfoNDG6s\" width=\"480\" height=\"360\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/loop-glas2019-glas-2019-3d0amMEvOOZfoNDG6s\">via GIPHY</a></p>\n",
+    "\n",
     "To make the `child` node aware of its parent, we need to add a `parent` field to  \n",
     "our `Node` struct definition. The trouble is in deciding what the type of parent  \n",
     "should be. We know :  \n",
@@ -3982,7 +4157,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::cell::RefCell;\n",
@@ -4018,7 +4197,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4170,7 +4353,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4341,7 +4528,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
